# fantasy_player_valuation

./: .gitignore  README.md  pyproject.toml
plans/: 20260608-valuation_research_plan.md  20260611-sleeper_trade_value_model_plan.md
src/ffvaluation/: __init__.py  cli.py  models.py
src/ffvaluation/evaluation/: __init__.py  metrics.py
src/ffvaluation/ingestion/: __init__.py  snapshots.py
src/ffvaluation/sources/: __init__.py  registry.py
src/ffvaluation/sources/rosteraudit/: __init__.py  client.py
src/ffvaluation/sources/sleeper/: __init__.py  client.py  common.py  discovery.py  models.py  trades.py
tests/: test_metrics.py  test_models.py  test_snapshots.py  test_sources.py
tests/fixtures/: manual_snapshot.csv
